<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wallk</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_artwork_list">Artworks list</string>
    <string name="title_activity_new_artwork">NewArtworkActivity</string>
    <string name="title_activity_custom_marker_clustering">CustomMarkerClusteringActivity</string>
    
    <string name="title_location_activity">Location</string>
    <string name="menu_title">My Pictures</string>
    <string name="artwork_label">Add an Artwork</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_new">Add an Artwork</string>
    <string name="action_account">My account</string>
    <string name="action_camera">Take a picture</string>
    <string name="action_gallery">View gallery</string>
    <string name="action_map">View map</string>

    <string-array name="ratings_array">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item></item>
    </string-array>
    
    <!-- vient de l'exemple Anywall (connexion d'user et géolocalisation) -->
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="slogan">The world is your wall</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_250">250 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_4000">4000 feet</string>
    <string name="search_distance">Search Distance</string>

    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    
    <!-- menu strings -->
    <string name="my_gallery">My pictures</string>
    <string name="my_account">My account</string>
    <string name="log_out">Log out</string>
    
    <!-- Error messages -->
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="nodata">NO DATA</string>
    
    <!-- LOCATION -->
    <string name="title_activity_map">Street Map</string>
    <string name="mapKey">AIzaSyCpg2TU6vJJRfHwWpQ7yQ63Q8BxY-TPsKM</string>
    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    
    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    
    <!-- ACCOUNT -->
    <string name="newTitle">New :</string>
    <string name="usernameTitle">Username : </string>
    <string name="formerUsername">Former Username :</string>
    <string name="error_same_username">enter a new name</string>
    <string name="mail_title">Your mail :</string>
    <string name="password_mail_ok">The mail was successfully sent</string>
    <string name="account_title">My Account</string>
 
    <string name="passwordTitle">Password : </string>
    <string name="fakePassword">********</string>
    <string name="change">Change</string>
    <string name="changePasswordExplanation">Press OK will send you an email allowing you to choose a new password</string>
    
    <!-- In dialog popup for changing username or password -->
    <string name="formerTitle">Current:</string>
    <string name="newTitle">New:</string>

    <!-- picture fragment -->
    <string name="title">Title :</string>
    <string name="cancel">Cancel</string>
    <string name="publish">Publish</string>

     <!-- LOGIN SIGNUP -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="bg_login_description">Log In or Sign Up</string> 
    <string name="ok">OK</string>
    <string name="title_login">Log In</string>
    <string name="title_signup">Sign Up</string>
    
    <!-- CAMERA -->
    <string name="title_activity_camera">Shot a Tag</string>
    
    <!-- GALLERY -->
    <string name="title_activity_gallery">Tags Gallery</string>
    
    
</resources>
