<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/action_camera"
        android:showAsAction="always"
        android:title="@string/action_camera"
        android:icon="@drawable/ic_action_camera"/>
    
    <item 
        android:id="@+id/action_map"
        android:showAsAction="always"
        android:title="@string/action_map"
        android:icon="@drawable/ic_action_place"/>
    
    <item 
        android:id="@+id/action_gallery"
        android:showAsAction="always"
        android:title="@string/action_gallery"
        android:icon="@drawable/ic_action_view_as_grid"/>
    
    <item 
        android:id="@+id/action_submenu_account"
        android:showAsAction="always"
        android:title="@string/action_account"
        android:icon="@drawable/ic_action_person_w">
        
        <menu>
            <item
                android:id="@+id/action_myAccount"
                android:title="@string/my_account" />
            
            <item
                android:id="@+id/action_myGallery"
                android:title="@string/my_gallery" />
            
            <item
                android:id="@+id/action_logOut"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>

