<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/action_camera"
        android:showAsAction="always"
        android:title="@string/action_camera"
        android:icon="@drawable/ic_action_camera"/>
    
    <item 
        android:id="@+id/action_map"
        android:showAsAction="always"
        android:title="@string/action_map"
        android:icon="@drawable/ic_action_place"/>
    
    <item 
        android:id="@+id/action_gallery"
        android:showAsAction="always"
        android:title="@string/action_gallery"
        android:icon="@drawable/ic_action_view_as_grid"/>
    
    <item 
        android:id="@+id/action_submenu_account"
        android:showAsAction="always"
        android:title="@string/action_account"
        android:icon="@drawable/ic_action_person">
        
        <menu>
            <item
                android:id="@+id/action_login"
                android:title="@string/log_in" />
            
            <item
                android:id="@+id/action_signup"
                android:title="@string/sign_up" />
        </menu>
    </item>

</menu>
