<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
       
    <LinearLayout
		    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
    			
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/mail_title"
			android:paddingBottom="5dp"
			android:textSize="12sp" />
	    
	    <EditText
		         android:id="@+id/user_mail"
		         android:hint=""
	  			 android:inputType="text"
		         android:layout_width="fill_parent"
		         android:layout_height="wrap_content"
		         android:paddingBottom="5dp"
		         android:textSize="12sp" />
    </LinearLayout>
    
	<TextView
		android:id="@+id/changePasswordExplanation"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/changePasswordExplanation"
		android:paddingBottom="5dp"
		android:textSize="12sp" />
	
	<Button
        android:id="@+id/changePasswordButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>
