<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	    <LinearLayout
		    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
	        <TextView
			            android:id="@+id/usernameTitle"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/usernameTitle"
			            android:paddingBottom="5dp"
			            android:textSize="12sp" />
			<TextView
			           android:id="@+id/username"
			           android:layout_width="wrap_content"
			           android:layout_height="wrap_content"
			           android:paddingBottom="5dp"
			           android:textSize="12sp" />
			
			<Button
			         android:id="@+id/changeUsername"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:paddingBottom="5dp"
			         android:text="@string/change"
			         android:textSize="12sp" />
		</LinearLayout>
		
		<LinearLayout
		    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
			<TextView
			         android:id="@+id/passwordTitle"
			         android:layout_width="wrap_content"
			         android:layout_height="wrap_content"
			         android:paddingBottom="5dp"
			         android:text="@string/passwordTitle"
			         android:textSize="12sp" />
			
			<TextView
			            android:id="@+id/password"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:paddingBottom="5dp"
			            android:text="@string/fakePassword"
			            android:textSize="12sp" />
			 
			<Button
			           android:id="@+id/changePassword"
			           android:layout_width="wrap_content"
			           android:layout_height="wrap_content"
			           android:paddingBottom="5dp"
			           android:text="@string/change"
			           android:textSize="12sp" />
		</LinearLayout>
		

</LinearLayout>
