<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        	
    <LinearLayout
		    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
	     <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/formerUsername"
			android:paddingBottom="5dp"
			android:textSize="12sp" />
		<TextView
	         android:id="@+id/formerUsernameContent"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:paddingBottom="5dp"
	         android:textSize="12sp" />
	</LinearLayout>
	
	<LinearLayout
		    android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/newTitle"
			android:paddingBottom="5dp"
			android:textSize="12sp" />
		<EditText
	         android:id="@+id/newUsernameContent"
	         android:hint=""
  			 android:inputType="text"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:paddingBottom="5dp"
	         android:textSize="12sp" />
	</LinearLayout>
	
	<Button
            android:id="@+id/changeUsernameButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

</LinearLayout>